@@ -3,7 +3,8 @@
 #
 # Run benchmarks and collect results
 
-TOLERANCES='1e-1 5e-2 1e-2 5e-3 1e-3 5e-4 1e-4 5e-5 1e-5 5e-6 1e-6'
+TOLERANCES='1e-3 5e-4 1e-4 5e-5 1e-5'
+#TOLERANCES='1e-1 5e-2 1e-2 5e-3 1e-3 5e-4 1e-4 5e-5 1e-5 5e-6 1e-6'
 #TOLERANCES='1e-1'
 LOGFILE='output.log'
 RESULTS='bench.log'
